--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2009,3 +2009,241 @@ h3{
    margin-top: 20px;
    text-align: center;
 }
+/* <--------------CartPage PopUp Style-------------------> */
+#divFlexN{
+    /* width: 25%; */
+    display: flex;
+    overflow: scroll;
+    overflow-y: hidden;
+    font-size: 16px;
+        color: rgb(0, 0, 0);
+font-family: BrandonTextWeb-Medium, "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
+    margin-bottom: 30px;
+    margin-top: -30px;
+}
+#disDivCon{
+    display: flex;
+}
+#divspi{
+    width: 100%; 
+    background-color: white;
+}
+#quant{
+    border: 2px solid rgb(255,78,116);
+    width: 90px;
+    margin-top: 10px;
+    height: 30px;
+    border-radius: 30px;
+    margin-left: 20px;
+    font-size: 25px;
+    display: flex;
+}
+#imgcART{
+    width: 120px;
+    margin-right: 10px;
+    margin-left: 10px;
+}
+#countshow{
+    font-size: 20px;
+    margin-left: 10px;
+     margin-right: 10px;
+     margin-top: 3px;
+}
+hr{
+    height: 1px;
+      /* background-color: lightgray; */
+    width: 85%;
+}
+#buttonCart{
+    width:90%;
+
+    border: none;
+   border-radius: 10px;
+    background-image: linear-gradient(to right, rgb(255, 50, 120), rgb(255, 89, 114));
+    box-shadow: rgb(247 123 155 / 71%) 0px 3px 15px 0px;
+    padding: 15px 10px;
+      position:absolute;
+       right:0;
+       
+      bottom: 10px;
+      margin-top: -75px;
+      margin-right: 28px;
+      color: whitesmoke;
+      font-size: 16px;
+}
+#scrollN{
+      max-height: 460px;
+      width: 340px;;
+     overflow: scroll;
+     margin-top: -10px;
+       position:relative;
+       overflow-x: hidden;
+}
+nav{
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 10px;
+    overflow: hidden;   
+}
+#chiDiv{
+    display: none;
+    /* position: absolute; */
+    /* border: 1px solid red; */
+    top:10%;;
+    right:0;
+    z-index: 99000;
+    width: 25%;
+    position: fixed;
+    box-shadow: rgb(0 0 0 / 22%) 0px 2px 4px 2px;
+    transition: all 0.3s ease-in-out 0s;
+}
+#deleteProd{
+    position: absolute;
+    width:12px;
+    height: 12px;
+    right: 15px;
+    cursor: pointer;
+}
+#pprod{
+color: #9b9b9b;
+}
+#psize{
+color: #9b9b9b;
+}
+#pN{
+        font-size: 18px;
+    color: rgb(0, 0, 0);
+    /* font-family: BrandonTextWeb-Medium, "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif; */
+    margin-bottom: 30px;
+    margin-top:0px;
+    margin-left:10px;
+}
+#cartNik{
+   margin-top:5px;
+}
+       /* <------------SmallScreen NAvbar----------------> */
+       #hamburgericon{
+        padding:10px;
+    }
+    #hamburgericon>div {
+        width: 35px;
+        height: 5px;
+        background-color: rgb(0, 0, 0);
+        margin: 6px 0;
+        z-index: 1;
+    }
+    #smallScreenNav{
+        display: none;
+        position:sticky;
+        transition: all 1s ease 1s;
+    }
+    #dropdownNav{
+        display: none;
+        display:flex;
+        flex-direction: column;
+        width: 50vw;
+        height:100vh;
+        position:absolute;
+        top:0px;
+        left: 0px;
+        overflow-y: scroll;
+        overflow-x: hidden;
+        background: rgb(34, 34, 34);
+        padding-top: 30px;
+         max-width: 350px;
+         transition: all 1s ease 1s;
+    }
+    #cross>.fa-times{
+        color:white;
+        font-size: 38px;
+        position: absolute;
+        top:20px;
+        right: 30px;
+        
+    }
+    #cultlogodis>img{
+        width: 100px;
+        margin-bottom: 30px;
+        padding-left: 3px;
+    }
+    #navPages{
+        display:flex;
+        flex-direction:column;
+        color: white;
+    
+    } 
+    #navPages>div{
+        width:100%;
+        /* text-align:center; */
+        padding: 20px;
+        padding-right: 40px;
+        text-transform: uppercase;
+        padding-left: 40px;
+        font-size: 16px;
+        font-weight: bold;
+        font-family: BrandonTextWeb-Regular,Helvetica Neue,Helvetica,Roboto,Arial,sans-serif;
+        color: white;
+        max-width: 350px;
+        /* border-top: 1px solid white; */
+        border-bottom: 1px solid rgb(0, 0, 0);
+    }
+    #navPages>div>a{
+        text-decoration: none;
+        color: white;
+    }
+    #downLogin{
+        display:flex;
+        flex-direction:column;
+        flex-wrap: wrap;
+        color: white;
+        
+    }
+    #downLogin>div{
+        width:100%;
+        text-transform: none;
+        /* padding: 20px 20px 20px 0px; */
+        font-size: 15px;
+        padding: 15px;
+        padding-right: 40px;
+        text-transform: uppercase;
+        padding-left: 40px;
+        /* font-weight: bold; */
+        font-family: BrandonTextWeb-Regular,Helvetica Neue,Helvetica,Roboto,Arial,sans-serif;
+        color: white;
+        max-width: 350px;
+        /* /* max-width: 350px; */
+    }
+    #downLogin>div>a{
+        text-decoration: none;
+        color: white;
+    }
+      /* <-----------MediaQueriesNavbar------------> */
+    @media screen and (max-width:720px){
+        #innerNavbar{
+          width: 50%;
+          justify-content:center;
+          align-items:center;
+          margin-left: auto;
+        }
+        #innerNavbar>#logo{
+            /* justify-content:center; */
+        }
+        #location{
+            /* width: 30vw; */
+            margin-right:0px;
+           margin-left: 100%;
+        }
+        #diff-pages,#location,#open,#spet,#order,#profile,#spet,#eatSubpages,#logged-out,#blue-dot,#cartNik{
+            display:none;
+        }
+        #footerd4 img{
+            width:5%;
+        }
+        #eatheader{
+            width:80%;
+        }
+        #smallScreenNav{
+            display: block;
+        }
+        #dropdownNav{
+            display: none;
+        }
+    }
