--- a/views/logout.ejs
+++ b/views/logout.ejs
@@ -13,6 +13,36 @@
 <body>
   <!-- navbar -->
     <div id="navbar">
+      <div id="smallScreenNav">
+        <div id="hamburgericon">
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+        <div id="dropdownNav">
+            <div id="cultlogodis">
+                <img src="https://static.cure.fit/assets/images/curefit-v-man-white.svg" alt="user-image" class=" style-prefix-2jfr04 efaomd31" loading="lazy" width="40" height="45.45454545454545">
+            </div>
+            <div id="cross">
+                <i class="fas fa-times"></i>
+            </div>
+             <div id="navPages">
+                   <div><a href="/index.html">Home</a></div>
+                   <div><a href="/cultpage.html">CULT</a></div>
+                   <div><a href="/live.html">LIVE</a></div>
+                   <div><a href="/care.html">CARE</a></div>
+                   <div><a href="/mind.html">MIND</a></div>
+                   <div><a href="/storepage.html">STORE</a></div>
+                   <div><a href="/eatordernow.html">EAT</a></div>
+                  
+             </div>
+             <div id="downLogin">
+                <div id="signin">SignIn</div>
+                <div >Cart</div>
+                <div>LogOut</div>
+           </div>
+        </div>
+      </div>
         <div id="innerNavbar">
             <div id="logo" class="logo">
                 <a href="/logout">
