--- a/views/index.ejs
+++ b/views/index.ejs
@@ -970,7 +970,7 @@
       const auth = document.getElementById("auth")
 
       auth.addEventListener("click",function () {
-          window.location.href = "http://localhost:2345/google"
+          window.location.href = "https://cult-fit-clone-w13.herokuapp.com/google"
       })
     </script>
 
