--- a/views/logout.ejs
+++ b/views/logout.ejs
@@ -990,5 +990,5 @@
 
 </body>
 </html>
-
+<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 <script src="/js/logout.js"></script>
