--- a/public/style.css
+++ b/public/style.css
@@ -306,9 +306,10 @@ body {
 
 .container-slider {
     margin-top: 4%;
-  display: flex;
-  width: 100%;
-  border-radius: 20px;
+    display: flex;
+    width: 100%;
+    border-radius: 20px;
+    overflow: hidden;
 }
 
 .panel {
